Fix a little typo

--- a/constraints/constraints-round-02.ipynb
+++ b/constraints/constraints-round-02.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**규칙 2.** 유닛의 **$\\text{HP}$ 최소값은 10**이다. 따라서 팀에서 유닛 생성 시 모든 유닛의 HP를 10 이상의 값으로 설정해야 한다."
+    "**규칙 2.** 유닛의 **$\\text{HP}$ 최소값은 10**이다. 따라서 팀에서 유닛 생성 시 모든 유닛의 $\\text{HP}$를 10 이상의 값으로 설정해야 한다."
    ]
   },
   {
