Revise constraints for round-03

--- a/constraints/constraints-round-03.ipynb
+++ b/constraints/constraints-round-03.ipynb
@@ -30,14 +30,16 @@
     "**규칙 2.** **턴 40회**를 진행하는 단일 게임을 **6회 진행**하여 많이 이긴 팀이 승리한 것으로 판정한다.\n",
     "단일 게임마다 참가자의 팀은 미리 정의된 유닛 세트로 자동 설정된다.\n",
     "\n",
-    "단일 게임 1: Balance\n",
-    "단일 게임 2: Bomb\n",
-    "단일 게임 3: Cards\n",
-    "단일 게임 4: Chessmen\n",
-    "단일 게임 5: Forest\n",
-    "단일 게임 6: LoL\n",
+    "- 단일 게임 1 (턴 40회): **Balance**\n",
+    "- 단일 게임 2 (턴 40회): **Bomb**\n",
+    "- 단일 게임 3 (턴 40회): **Cards**\n",
+    "- 단일 게임 4 (턴 40회): **Chessmen**\n",
+    "- 단일 게임 5 (턴 40회): **Forest**\n",
+    "- 단일 게임 6 (턴 40회): **LoL**\n",
     "\n",
-    "단일 게임 종료 후 가장 많이 살아남은 유닛이 많은 팀이 단일 게임에서 승리하며, 최종적으로 단일 게임을 많이 이긴 팀이 승리한다."
+    "단일 게임이 종료될 때마다 (턴 40회가 끝날 때마다) 살아남은 유닛이 많은 팀이 해당 단일 게임에서 승리하며, 최종적으로 단일 게임을 많이 이긴 팀이 승리한다.\n",
+    "\n",
+    "예를 들어, 단일 게임1, 2, 4, 5에서 승리하였다면 스코어 4:2로 상대팀에게 승리하게 된다."
    ]
   },
   {
